tests/baselines/reference/strictModeCode8.errors.txt
tests/cases/compiler/strictModeCode8.ts(2,8): error TS1214: Identifier expected. 'public' is a reserved word. Module is automatically in strict mode.
tests/cases/compiler/strictModeCode8.ts(3,8): error TS1214: Identifier expected. 'private' is a reserved word. Module is automatically in strict mode.


==== tests/cases/compiler/strictModeCode8.ts (2 errors) ====
    "use strict"
    module public { }
           ~~~~~~
!!! error TS1214: Identifier expected. 'public' is a reserved word. Module is automatically in strict mode.
    module private { }
           ~~~~~~~
!!! error TS1214: Identifier expected. 'private' is a reserved word. Module is automatically in strict mode.